// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RatingComponent Favorite True 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "flex-end",
        "display": "flex",
        "flexDirection": "row",
        "marginBottom": 12,
        "marginLeft": 12,
        "marginRight": 12,
        "marginTop": 12,
      },
    ]
  }
>
  <div
    averageRating={3}
    handleRating={[Function]}
    ownRating={5}
    ratingCount={17}
    testID="RatingComponent"
  />
  <div
    color="#F10F0F"
    name="heart"
    onPress={[Function]}
    size={35}
    testID="Icon"
  />
</View>
`;

exports[`RatingComponent Favorite false light theme 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "flex-end",
        "display": "flex",
        "flexDirection": "row",
        "marginBottom": 12,
        "marginLeft": 12,
        "marginRight": 12,
        "marginTop": 12,
      },
    ]
  }
>
  <div
    averageRating={3}
    handleRating={[Function]}
    ownRating={5}
    ratingCount={17}
    testID="RatingComponent"
  />
  <div
    color="#222"
    name="heart"
    onPress={[Function]}
    size={35}
    testID="Icon"
  />
</View>
`;
